# weca-core-data

./: .env.example  .gitignore  CLAUDE.md  DLT_EVALUATION.md  HYBRID_IMPLEMENTATION_PLAN.md  MIGRATION.md  PHASE_1_RESULTS.md  README.md  STRATEGIES.md  build_tables_queries.py  cesap-epc-load-duckdb-data.py  epc_schema.py  get_ca_data.py  project.faf  pyproject.toml  pytest.ini  ruff.toml  setup_credentials.py  test_dft_only.py  test_fast_sample.py  test_network_connectivity.py  test_network_connectivity.sh  test_sources_individually.py  update-project.ps1  update_epc.py  user-keybindings.json  validate_urls.py  verify_credentials.py
.claude/: settings.local.json
.dlt/: secrets.toml.example
.serena/: project.yml
agent-docs/: cli-tools-memory.md  python-code-guidelines.md
docs/: CREDENTIALS_SETUP.md  LOCAL_TESTING_GUIDE.md  NETWORK_REQUIREMENTS.md  QUICKSTART.md  README.md
loaders/: __init__.py  create_views.py  spatial_setup.py
pipelines/: __init__.py  extract_all_sources.py  orchestrate_etl.py
sources/: __init__.py  arcgis_sources.py  epc_sources.py  other_sources.py
tests/: README.md  __init__.py  conftest.py  test_epc_sources.py  test_loaders.py  test_sources.py  test_transformers.py  test_transformers_geography.py
tests/integration/: README.md  test_arcgis_sources.py  test_other_sources.py
transformers/: __init__.py  emissions.py  epc.py  geography.py
